tests/invalid/sintaxis_falta_llave.flow
// EXPECT: E201
workflow demo {
    start -> validar
    validar -> end
